logs/Slang/generic/typedef/typedef_test_26.sv.log
name: typedef_test_26
description: Test
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_26.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_26.sv:11:12: error: expression width of 4 does not exactly match declared enum type width of 32
  Global = 4'h1,
           ^~~~
